--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
+
 DATABASE_URL=
